--- a/src/main/resources/templates/join/userJobSelect.html
+++ b/src/main/resources/templates/join/userJobSelect.html
@@ -2,71 +2,75 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head th:replace="fragments/header :: header" />
 <body>
-    <!-- Top -->
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark mb-5">
-        <div class="container px-5">
-            <div th:replace="fragments/bodyTopLogo :: bodyTopLogo"/>
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-                    <li class="nav-item"><a class="nav-link"
-                                            th:onclick="|location.href='@{/login}'|"
-                                            style=" font-size:1.0em; width:90px; height:39px">로그인</a></li>
-                </ul>
-            </div>
+<!-- Top: logo, login -->
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark mb-5">
+    <div class="container px-5">
+        <div th:replace="fragments/bodyTopLogo :: bodyTopLogo"/>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+                <li class="nav-item"><a class="nav-link"
+                                        th:onclick="|location.href='@{/login}'|"
+                                        style=" font-size:1.0em; width:90px; height:39px">로그인</a></li>
+            </ul>
         </div>
-    </nav>
-    <!--Header-->
-    <header class="bg-white mb-5 py-5">
-        <div class = "container px-5">
-            <h1 class="text-dark text-center">세종대병원</h1>
-            <h2 class="text-dark text-center">회원 가입</h2>
+    </div>
+</nav>
+
+    <!--단계 표시-->
+    <header class = "container mb-5">
+        <h1 class = "text-center">1. 회원 선택</h1>
+        <p class = "text-center">현재 회원 선택 페이지입니다. <br> <strong>회원 가입을 진행할 회원을 선택하세요.</strong></p>
+        <div class = "progress" style = "height: 30px;">
+            <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar"
+            aria-valuenow="25" aria-valuemin="0" aria-valuemax="100" style="width:25%">
+              진행률 25%
+            </div>
         </div>
     </header>
 
     <!-- Three Button Select-->
-    <section class="bg-white py-10">
-        <div class="container px-5">
-            <div class="row gx-5 text-center">
-                <div class="col-lg-4 mb-5 mb-lg-0 bg-primary"
-                     th:onclick="|location.href='@{/join/patient}'|" style="cursor:pointer">
-                    <div class="icon-stack icon-stack-xl bg-gradient-primary-to-secondary text-white mb-5"><i></i></div>
+    <section>
+        <div class="container">
+            <div class="row text-center mb-4">
+
+                <span class = "col-lg-1"></span>
+                <div class="col-lg-2 col-md-4 mb-5 mb-lg-0 bg-primary shadow rounded-circle divHover" th:onclick="|location.href='@{/join/patient}'|" style="cursor:pointer">
+                    <div class="bg-gradient-primary-to-secondary text-white mb-5"></div>
                     <h1 class="text-white">환자</h1>
                     <p class="mb-2 text-white">환자는 이 박스를 클릭하여 가입을 해주세요.</p>
                 </div>
-                <div class="col-lg-4 mb-5 mb-lg-0 bg-light"
-                     th:onclick="|location.href='@{/join/doctor}'|" style="cursor:pointer">
-                    <div class="icon-stack icon-stack-xl bg-gradient-primary-to-secondary text-white mb-5"><i></i></div>
+
+                <span class = "col-lg-2"></span>
+                <div class="col-lg-2 col-md-4 mb-5 mb-lg-0 bg-light shadow rounded-circle border border-white divHover" th:onclick="|location.href='@{/join/doctor}'|" style="cursor:pointer">
+                    <div class="bg-gradient-primary-to-secondary text-white mb-5"></div>
                     <h1>의사</h1>
                     <p class="mb-2">의사는 이 박스를 클릭하여 가입을 해주세요.</p>
                 </div>
-                <div class="col-lg-4 bg-primary"
-                     th:onclick="|location.href='@{/join/nurse}'|" style="cursor:pointer">
-                    <div class="icon-stack icon-stack-xl bg-gradient-primary-to-secondary text-white mb-5"><i></i></div>
+
+                <span class = "col-lg-2"></span>
+                <div class="col-lg-2 col-md-4 bg-primary shadow rounded-circle divHover" th:onclick="|location.href='@{/join/nurse}'|" style="cursor:pointer">
+                    <div class="bg-gradient-primary-to-secondary text-white mb-5"></div>
                     <h1 class = "text-white">간호사</h1>
                     <p class="mb-5 text-white">간호사는 이 박스를 클릭하여 가입을 해주세요.</p>
                 </div>
+
+                <span class = "col-lg-1"></span>
+
             </div>
+
+            <div class="text-center">
+                <button class = "btn btn-light" type = "button" th:onclick="|location.href='@{/}'|">이전</button>
+            </div>       
         </div>
+
         <div class="svg-border-rounded text-light">
             <!-- Rounded SVG Border-->
             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 144.54 17.34" preserveAspectRatio="none" fill="currentColor"><path d="M144.54,17.34H0V0H144.54ZM0,0S32.36,17.34,72.27,17.34,144.54,0,144.54,0"></path></svg>
         </div>
     </section>
 
-    <!-- Footer-->
-    <footer class="py-5 bg-dark fixed-bottom">
-        <div class="container px-5">
-            <p class="m-0 text-center text-white">Copyright &copy; Your Website 2022</p>
-        </div>
-    </footer>
-    <!-- Bootstrap core JS-->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
-    <!-- Core theme JS-->
-    <script src="js/scripts.js"></script>
-    <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * *-->
-    <!-- * *                               SB Forms JS                               * *-->
-    <!-- * * Activate your form at https://startbootstrap.com/solution/contact-forms * *-->
-    <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * *-->
-    <script src="https://cdn.startbootstrap.com/sb-forms-latest.js"></script>
+<!-- Footer-->
+<div th:replace="fragments/footer :: footer"/>
 </body>
+
 </html>
