--- a/src/main/resources/templates/login/loginForm.html
+++ b/src/main/resources/templates/login/loginForm.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
-<!--<html lang="ko">-->
 <head th:replace="fragments/header :: header" />
 <head>
     <style>
@@ -11,27 +10,12 @@
     </style>
 </head>
 <body>
-    <!-- Responsive navbar-->
-    <!-- !border: 3px solid rgb(0, 0, 0); -->
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <div class="container px-5">
-            <a class="navbar-brand" th:onclick="|location.href='@{/}'|" style="cursor:pointer">
-                <img src="assets/images/sejong_black.png" width="37" style="                 
-                  border-radius: 70px;
-                  -moz-border-radius: 70px;
-                  -khtml-border-radius: 70px;
-                  -webkit-border-radius: 70px;
-                  " alt="My Logo">
-                세종대병원</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
-                aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-                </ul>
-            </div>
-        </div>
-    </nav>
+<!-- top: logo, login -->
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <div class="container px-5">
+        <div th:replace="fragments/bodyTopLogo :: bodyTopLogo"/>
+    </div>
+</nav>
 
     <!--Log-in Section-->
     <section>
@@ -40,9 +24,10 @@
                 <div class="col-sm-9 col-md-7 col-lg-5 mx-auto">
                     <div class="card card-signin my-5">
                         <div class="card-body">
-                            <h2 class="card-title text-center mb-5">세종대병원</h2>
-                            <form class="form-signin" method="post" action="loginForm.html" th:action th:object="${loginForm}">
+                            <h2 class="card-title text-center mb-5">통합 로그인</h2>
+                            <form class="form-signin" method="post" action="login" th:action th:object="${loginForm}">
 
+                                <!-- 글로벌 오류 메세지 -->
                                 <div th:if="${#fields.hasGlobalErrors()}" class="text-center mb-4">
                                     <p class="field-error" th:each="err : ${#fields.globalErrors()}"
                                        th:text="${err}">전체 오류 메시지</p>
@@ -59,12 +44,14 @@
                                 </div>
 
                                 <div class="text-center mb-4">
-                                    <button class="btn btn-lg btn-primary btn-block text-uppercase"
-                                        type="submit">로그인</button>
+                                    <button class="btn btn-lg btn-primary btn-block text-uppercase" type="submit">로그인</button>
                                 </div>
 
+                                <div class = "text-center mb-4">
+                                    <h7>아이디와 비밀번호를 잊으셨나요? <a th:onclick="|location.href='@{/login/findLoginId}'|" style="cursor:pointer; color:blue; font-weight: bold">아이디</a>  /  <a th:onclick="|location.href='@{/login/findLoginPw}'|" style="cursor:pointer; color:blue; font-weight: bold">비밀번호</a> 찾기</h7>
+                                </div>
                                 <div class="text-center mb-4">
-                                    <h7>아직 회원이 아니시면, <a th:onclick="|location.href='@{/join}'|" style="cursor:pointer">이 링크를 클릭하여주십시오.</a></h7>
+                                    <h7>아직 회원이 아니시면, <a th:onclick="|location.href='@{/join}'|" style="cursor:pointer; color:blue; font-weight: bold" >이 링크를 클릭하여주십시오.</a></h7>
                                 </div>
                             </form>
                         </div>
@@ -75,21 +62,7 @@
     </section>
 
     <!-- Footer-->
-    <footer class="py-5 bg-dark fixed-bottom">
-        <div class="container px-5">
-            <p class="m-0 text-center text-white">Copyright &copy; Your Website 2022</p>
-        </div>
-    </footer>
-    <!-- Bootstrap core JS-->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
-    <!-- Core theme JS-->
-    <script src="js/scripts.js"></script>
-    <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * *-->
-    <!-- * *                               SB Forms JS                               * *-->
-    <!-- * * Activate your form at https://startbootstrap.com/solution/contact-forms * *-->
-    <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * *-->
-    <script src="https://cdn.startbootstrap.com/sb-forms-latest.js"></script>
+    <div th:replace="fragments/footer :: footer"/>
 </body>
-
 </html>
        
