--- a/src/main/resources/templates/join/doctor/userJoinDoctor.html
+++ b/src/main/resources/templates/join/doctor/userJoinDoctor.html
@@ -68,7 +68,7 @@
                 <div class="col-sm-9 col-md-7 col-lg-6 mx-auto">
                     <div class="card my-5">
                         <div class="card-body">
-                            <form class="needs-validation" method="post" novalidate th:action th:object="${doctor}">
+                            <form class="needs-validation" method="post" novalidate th:action th:object="${doctor}" enctype="multipart/form-data">
 
                                 <div class="mb-4">
                                     <label class="form-label" for="id"><strong>* 아이디</strong></label>
@@ -171,7 +171,7 @@
 
                                     <div class = "input-group">
                                         <button class = "btn btn-outline-primary" id = "addonPhoto" type = "button" onclick="location.href = '#'">업로드</button>
-                                        <input class="form-control" type="file" id="formFile" aria-describedby="addonPhoto" onchange="imgPreview()">
+                                        <input class="form-control" type="file" id="formFile" aria-describedby="addonPhoto" onchange="imgPreview()" multiple="multiple">
                                     </div>
                                 </div>
 
