--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -27,5 +27,5 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css" rel="stylesheet" />
     <link rel = "stylesheet" th:href="@{/css/tableCollapse.css}">
     <link rel = "stylesheet" th:href="@{/css/test.css}">
-    <link href="../../assets/images/favicon.ico" rel="shortcut icon" type="image/x-icon">
+    <link th:href="@{../../assets/images/favicon.ico}" rel="shortcut icon" type="image/x-icon">
 </head>
