--- a/src/main/resources/templates/join/patient/userJoinPatient.html
+++ b/src/main/resources/templates/join/patient/userJoinPatient.html
@@ -30,13 +30,6 @@
     <!--단계 표시-->
     <header class="container mb-4">
         <h1 class="text-center">회원가입</h1><br><br>
-<!--        <p class="text-center">현재 회원 가입 페이지입니다.<br> <strong> 가입 정보가 미흡한 경우, 다음 단계로 진행이 불가합니다.</strong></p><br>-->
-<!--        <div class="progress" style="height: 30px;">-->
-<!--            <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="99"-->
-<!--                aria-valuemin="0" aria-valuemax="100" style="width:99%">-->
-<!--                진행률 99%-->
-<!--            </div>-->
-<!--        </div>-->
     </header>
 
 <div class="content-body">
@@ -74,7 +67,7 @@
                                     <label class="form-label" for="id"><strong>* 아이디</strong></label>
                                     <div class = "input-group" style="padding-bottom: 20px">
                                         <input type="text" id="id" th:field="*{loginId}" class="form-control" aria-describedby="addon1" maxlength="20" th:errorclass="field-error">
-                                        <button class="btn btn-outline-primary" type = "submit" id = "addon1">중복 확인</button>
+                                        <input class="btn btn-outline-primary" type = "submit" id = "idCheck" value="중복 확인"/>
                                     </div>
                                     <!-- 오류 메세지 -->
                                     <div th:if="${#fields.hasGlobalErrors()}" class="text-left">
